# codex-power-pack

./: .env.example  .gitignore  .gitleaks.toml  .woodpecker.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALLATION_ISSUES.md  ISSUE_DRIVEN_DEVELOPMENT.md  LICENSE  MCP_TOKEN_AUDIT_CHECKLIST.md  Makefile  PROGRESSIVE_DISCLOSURE_GUIDE.md  README.md  docker-compose.yml  fetch_reddit_posts.py  pyproject.toml  scrape_reddit.py
.agents/plugins/: marketplace.json
.claude/: cicd.yml  cicd_tasks.yml
.claude/commands/: happy-check.md  load-best-practices.md  load-mcp-docs.md  project-lite.md  project-next.md
.claude/skills/: best-practices.md  browser-tiered.md  cicd-verification.md  claude-md-config.md  code-quality.md  context-efficiency.md  documentation.md  evaluate.md  hooks-automation.md  idd-workflow.md  mcp-optimization.md  project-deploy.md  python-packaging.md  secrets.md  session-management.md  skills-patterns.md  spec-driven-dev.md
.codex/: cicd_tasks.yml  harness-lint-allowlist.txt  hooks.json  secrets.yml
.codex/prompts/: dockers.md  load-mcp-docs.md  project-next.md
.codex/skills/: README.md
.github/ISSUE_TEMPLATE/: best-practice.yml  bug-report.yml  config.yml  correction.yml  feature-request.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
aws-secretsmanager-agent/: Dockerfile
codex-nano-banana/: README.md  start-server.sh
codex-nano-banana/deploy/: Dockerfile  nano-banana.service
codex-nano-banana/src/: config.py  server.py
codex-playwright/: .dockerignore  README.md  pyproject.toml  start-server.sh
codex-playwright/deploy/: Dockerfile  mcp-playwright.service  mcp-playwright.service.template
codex-playwright/src/: server.py
codex-second-opinion/: README.md  start-server.sh
codex-second-opinion/deploy/: Dockerfile  docker-compose.yml  mcp-second-opinion.service  mcp-second-opinion.service.template
codex-woodpecker/: README.md  pyproject.toml  start-server.sh
docs/: HOST_MANAGED.md  agents-md-lint-e2e.md  cicd-reliability-review-implementation.md  cicd-reliability-synthesis.md  deploy-runtime-boundary.md  flow-lifecycle-e2e.md  friction-retro-e2e.md  plugin-marketplace-fresh-e2e.md  plugin-marketplace-project-e2e.md  plugin-marketplace-qa-e2e.md  plugin-marketplace-spec-e2e.md  release-process.md
extras/: README.md
lib/cicd/: __init__.py  __main__.py  cli.py  config.py  container.py  detector.py  health.py  infrastructure.py  makefile.py  manifest.py  models.py  pipeline.py  pyproject.toml  runner.py  security_scan.py  smoke.py  state.py  steps.py
lib/cicd/deploy/: __init__.py  docker_compose.py  strategy.py
lib/creds/: __init__.py  __main__.py  audit.py  base.py  cli.py  config.py  credentials.py  masking.py  permissions.py  project.py  pyproject.toml  run.py
lib/creds/providers/: __init__.py  aws.py  dotenv.py  env.py
lib/creds/ui/: __init__.py  app.py
lib/security/: __init__.py  __main__.py  cli.py  config.py  explain.py  models.py  orchestrator.py  pyproject.toml
lib/security/modules/: __init__.py  debug_flags.py  env_files.py  gitignore.py  gitleaks.py  npm_audit.py  permissions.py  pip_audit.py  secrets.py
lib/security/output/: __init__.py  json_output.py  novice.py
lib/spec_bridge/: __init__.py  __main__.py  cli.py  issue_sync.py  parser.py  pyproject.toml  status.py
mcp-evaluate/: README.md  pyproject.toml  start-server.sh
mcp-evaluate/deploy/: Dockerfile  mcp-evaluate.service
mcp-evaluate/src/: config.py  domains.py  server.py
mcp-nano-banana/: README.md  pyproject.toml
mcp-nano-banana/deploy/: nano-banana.service
mcp-nano-banana/src/: config.py  pptx_builder.py
mcp-nano-banana/src/diagrams/: __init__.py  base.py  c4.py  flowchart.py  orgchart.py  sequence.py  validate.py
mcp-playwright-persistent/: README.md  pyproject.toml
mcp-playwright-persistent/deploy/: Dockerfile  install-service.sh  mcp-playwright.service  mcp-playwright.service.template
mcp-playwright-persistent/src/: server.py
mcp-second-opinion/: README.md  pyproject.toml  start-server.sh
mcp-second-opinion/deploy/: mcp-second-opinion.service  mcp-second-opinion.service.template
mcp-second-opinion/scripts/: install-service.sh  setup-api-key.sh
mcp-second-opinion/src/: config.py  prompts.py  server.py  sessions.py
mcp-second-opinion/src/tools/: fetch_url.py
mcp-woodpecker-ci/: README.md  pyproject.toml  start-server.sh
mcp-woodpecker-ci/deploy/: Dockerfile
mcp-woodpecker-ci/scripts/: setup-go-binary.sh
mcp-woodpecker-ci/src/: client.py  config.py  server.py
scripts/: bash-prep.sh  codex-friction-hook.py  codex_skills_sync.py  deploy_doctor.py  deploy_mcp.sh  harness_lint.py  hook-mask-output.sh  hook-validate-command.sh  mcp_common.py  mcp_doctor.py  mcp_install_codex.py  mcp_smoke.py  prompt-context.sh  secrets-mask.sh  skills_install_codex.py  worktree-remove.sh
templates/: Makefile.example  cicd.yml.example  qa.yml.example
tests/: conftest.py  qa-dogfood.spec.cjs  test_agents_md_dogfood.py  test_agents_md_skill_trigger_parity.py  test_c4_integration.py  test_cicd_health.py  test_cicd_pipeline.py  test_cicd_skill_trigger_parity.py  test_codex_skills_drift.py  test_codex_workflow_state_paths.py  test_config_validation.py  test_creds_base.py  test_creds_config.py  test_creds_masking.py  test_creds_run.py  test_cxpp_plugin.py  test_density.py  test_deploy.py  test_deploy_doctor.py  test_deploy_integration.py  test_deploy_mcp.py  test_docs_cutover.py  test_documentation_skill_trigger_parity.py  test_documentation_skills.py  test_flow_cicd_runtime.py  test_flow_helper_resolution.py  test_flow_lifecycle_dogfood.py  test_flow_skill_trigger_parity.py  test_flow_worktree_base.py  test_fresh_marketplace_e2e.py  test_friction_retro.py  test_friction_retro_e2e.py  test_friction_writer.py  test_github_skill_trigger_parity.py  test_harness_lint.py  test_host_managed_mcp.py  test_manifest.py  test_mcp_common.py  test_mcp_docs_endpoints.py  test_mcp_secret_contract.py  (+26 more)
woodpecker/: bootstrap-secrets.py  docker-compose.agent.yml  docker-compose.yml
(+534 files in other folders)
