[project]
name = "mcp-evaluate"
version = "1.0.0"
description = "Domain-aware multi-model evaluation MCP server for Codex"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [{name = "cooneycw"}]

dependencies = [
    "mcp[cli]>=1.2.0",
    "fastmcp>=1.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
