[project]
name = "mcp-woodpecker-ci"
version = "1.0.0"
description = "Woodpecker CI MCP server - pipeline management and monitoring for Codex"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [{name = "cooneycw"}]

dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
