[project]
name = "cicd"
version = "0.1.0"
description = "CI/CD & Verification for Codex Power Pack"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "cooneycw"}
]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
all = ["pydantic>=2.0", "pyyaml>=6.0"]

[project.scripts]
cicd = "cicd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
